# apis-instance-inscribing-authority

./: README.md  pyproject.toml
apis_ontology/: filtersets.py  forms.py  models.py  settings.py  tables.py  urls.py  views.py
apis_ontology/migrations/: 0001_initial.py  0002_illustration_inscription_monument_object_objecttype_and_more.py  0003_remove_person_date_of_birth_date_from_and_more.py  0004_person_dynasty_alter_person_person_title_and_more.py  0005_placelocatedinplace_place_alternative_names_and_more.py  0006_inscriptionquotesassourcework.py  0007_inscriptionfoundinmonument_inscriptionfoundinobject_and_more.py  0008_personmentionedininscription_nisba_and_more.py  0009_inscriptionrepresentedasillustration_and_more.py  0010_monument_name_versionmonument_name.py  0011_monument_monument_type_object_current_position_and_more.py  0012_remove_person_date_of_birth_and_more.py  0013_delete_preservationstate.py  0014_inscriptionfoundinmonument_remarks_and_more.py  0015_monument_preservation_state_and_more.py  0016_inscription_preservation_state_and_more.py  0017_remove_inscription_is_extant_and_more.py  0018_inscription_reference_tei_and_more.py  0019_alter_inscription_reference_tei_and_more.py  0020_personmentionedininscription_dynasty_and_more.py  0021_alter_person_dynasty_and_more.py  0022_persongrandparentofperson_personhusbandofperson_and_more.py  0023_inscriptionquotesassourcework_remarks_and_more.py  0024_personmentionedininscription_benediction_and_more.py  0025_inscriptionquotesassourcework_reference.py  0026_object_object_type_vocab_and_more.py  0027_populate_object_type_vocab.py  0028_remove_object_object_type_and_more.py  0029_rename_object_type_vocab_object_object_type_and_more.py  0030_inscription_writing_field_and_more.py  0031_monumentconnectedtomonument_objectconnectedtoobject.py  0032_ornaments.py  0033_migrate_ornaments_data.py  (+2 more)
(+15 files in other folders)
