[project]
name = "apis-instance-inscribing-authority"
version = "0.1.0"
description = "Inscribing Authority"
authors = [{ name = "Saranya Balasubramanian" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
packages = [{include = "apis_ontology"}]
dependencies = [
    "apis-core-rdf==0.57.2",
    "apis-acdhch-default-settings==2.15.0",
    "psycopg[binary]>=3.2",
    "django-interval>=0.5.1",
    "apis-bibsonomy>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
